[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -371,10 +371,10 @@ safebrowsing.notAnAttackButton.label=Chan e làrach ionnsaighe a tha seo…
 safebrowsing.notAnAttackButton.accessKey=a
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Seall an #1 thaba;Seall na #1 tabaichean; Seall na #1 taba gu lèir
+ctrlTab.listAllTabs.label=Seall na tabaichean air fad (#1);Seall na tabaichean air fad (#1);Seall na tabaichean air fad (#1);Seall na tabaichean air fad (#1);
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
