--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -15,7 +15,9 @@ SHA1Sig=Tha an làrach seo a' cleachdadh teisteanas SHA-1; mholamaid gun cleachd
 InsecurePasswordsPresentOnPage=Tha raointean fhaclan-faire air duilleag (http://) nach eil tèarainte. Seo cunnart tèarainteachd agus faodaidh gun goidear faclan-faire air an luchd-chleachdaidh.
 InsecureFormActionPasswordsPresent=Tha raointean fhaclan-faire air ann am foirm le gnìomh foirm (http://) nach eil tèarainte. Seo cunnart tèarainteachd agus faodaidh gun goidear faclan-faire air an luchd-chleachdaidh.
 InsecurePasswordsPresentOnIframe=Tha raointean fhaclan-faire ann an iframe (http://) nach eil tèarainte. Seo cunnart tèarainteachd agus faodaidh gun goidear faclan-faire air an luchd-chleachdaidh.
-LoadingMixedActiveContent=A' luchdadh susbaint ghnìomhach mheasgaichte (neo-thèarainte) air duilleag thèarainte "%1$S"
-LoadingMixedDisplayContent=A' luchdadh susbaint taisbeanaidh mheasgaichte (neo-thèarainte) air duilleag thèarainte "%1$S"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and allow-same-origin for its sandbox attribute can remove its sandboxing.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# LOCALIZATION NOTE: Do not translate "RC4".
