--- a/browser/chrome/browser/devtools/scratchpad.properties
+++ b/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=Fosgail faidhle
 # open fails.
 openFile.failed=Dh'fhàillig leughadh an fhaidhle.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=Failed to convert file to Unicode from %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
