--- a/browser/chrome/browser/devtools/timeline.properties
+++ b/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,9 @@ timeline.records=RECORDS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Styles
-timeline.label.reflow=Reflow
+# We want to use the same wording as Google Chrome
+timeline.label.styles2=Recalculate Style
 timeline.label.paint=Paint
-timeline.label.javascript=Javascript
 timeline.label.domevent=DOM Event
 timeline.label.consoleTime=Console
 
@@ -65,3 +64,4 @@ timeline.markerDetail.DOMEventPhase=Phase:
 timeline.markerDetail.DOMEventTargetPhase=Target
 timeline.markerDetail.DOMEventCapturingPhase=Capture
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=Staca:
