--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,12 @@ peer_ended_conversation2=Chuir an duine eile sìos am fòn.
 conversation_has_ended=Thàinig an còmhradh gu crìoch.
 restart_call=Rach an sàs a-rithist
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title=Chan eil {{contactName}} an làthair.
+generic_contact_unavailable_title=Chan eil an neach seo an làthair.
+
 generic_failure_title=Chaidh rudeigin cearr.
 generic_failure_with_reason2='S urrainn dhut feuchainn ris a-rithist no ceangal a chur ann am post-d airson dèiligeadh ris as a dhèidh seo.
 generic_failure_no_reason2=A bheil thu airson feuchainn ris a-rithist?
@@ -270,7 +276,7 @@ feedback_category_audio_quality=Càileachd na fuaime
 feedback_category_video_quality=Càileachd a' video
 feedback_category_was_disconnected=Bhris an ceangal
 feedback_category_confusing=Ro thoinnte
-feedback_category_other=Rud eile:
+feedback_category_other2=Eile
 feedback_custom_category_text_placeholder=Dè chaidh cearr?
 feedback_submit_button=Cuir
 feedback_back_button=Air ais
