[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/devtools/timeline.properties
+++ b/browser/chrome/browser/devtools/timeline.properties
@@ -37,7 +37,9 @@ timeline.records=RECORDS
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
 timeline.label.styles2=Recalculate Style
+timeline.label.reflow2=Layout
 timeline.label.paint=Paint
+timeline.label.javascript2=Function Call
 timeline.label.domevent=DOM Event
 timeline.label.consoleTime=Console
 
@@ -65,3 +67,6 @@ timeline.markerDetail.DOMEventTargetPhase=Target
 timeline.markerDetail.DOMEventCapturingPhase=Capture
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
 timeline.markerDetail.stack=Staca:
+timeline.markerDetail.startStack=Stack at start:
+timeline.markerDetail.endStack=Stack at end:
+timeline.markerDetail.unknownFrame=<unknown location>
