--- a/browser/chrome/browser/shellservice.properties
+++ b/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = N
 setDefaultBrowserTitle=Am brabhsair bunaiteach
 setDefaultBrowserMessage=Chan eil %S 'na bhrabhsair bunaiteach agad an-dràsta. A bheil thu airson a shuidheachadh mar am brabhsair bunaiteach?
 setDefaultBrowserDontAsk=Ceasnaich seo gach turas a thòisicheas %S.
+setDefaultBrowserAlertConfirm.label=Cleachd %S mar am brabhsair bunaiteach agam
+setDefaultBrowserAlertNotNow.label=Chan ann an-dràsta
 
 desktopBackgroundLeafNameWin=Deasg Firefox.bmp
 DesktopBackgroundDownloading=A' sàbhaladh dealbh…
