--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -99,6 +99,7 @@ cookiesFiltered=Tha na briosgaidean a leanas a' freagairt ris an lorg agad:
 # you can use #1 in your localization as a placeholder for the number.
 # For example this is the English string with numbers:   
 # removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Thoir air falbh na thagh mi;Thoir air falbh na thagh mi;Thoir air falbh na thagh mi;Thoir air falbh na thagh mi
 
 #### Offline apps
 offlineAppsList.height=7em
