[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -207,7 +207,7 @@ call_with_contact_title=Còmhradh le {{contactName}}
 # Outgoing conversation
 
 outgoing_call_title=A bheil thu airson tòiseachadh air còmhradh?
-initiate_audio_video_call_button2=A bheil thu airson tòiseachadh?
+initiate_audio_video_call_button2=Tòisich
 initiate_audio_video_call_tooltip2=Tòisich air còmhradh video
 initiate_audio_call_button2=Còmhradh beòil
 initiate_call_cancel_button=Sguir dheth
