--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -24,4 +24,4 @@ BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and 
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
 WeakProtocolVersionWarning=Tha an làrach seo a' cleachdadh a' phròtacail SSL 3.0 airson crioptachadh nach eil tèarainte tuilleadh 's nach molar tuilleadh.
 # LOCALIZATION NOTE: Do not translate "RC4".
-WeakCipherSuiteWarning=Tha an làrach seo a' cleachdadh na sifire RC4 airson crioptachadh nach eil tèarainte tuilleadh 's nach molar tuilleadh.\u0020
+WeakCipherSuiteWarning=Tha an làrach seo a' cleachdadh na sifire RC4 airson crioptachadh nach eil tèarainte tuilleadh 's nach molar tuilleadh.
