[gd] update from Pootle (firefox)

--- a/toolkit/chrome/global/autocomplete.properties
+++ b/toolkit/chrome/global/autocomplete.properties
@@ -11,7 +11,7 @@ searchWithEngine = Lorg le %S
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
 searchWithEngineForQuery = %2$S — Lorg le %1$S\u00A0
-switchToTab = Atharraich gu taba
+switchToTab = Gearr leum gun taba
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
 visitURL = Tadhail air %S
