[gd] update from Pootle (mobile)

--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -4,7 +4,7 @@ BlockMixedDisplayContent = Chuir sinn casg air luchdadh susbaint-taisbeanaidh mh
 BlockMixedActiveContent = Chuir sinn casg air luchdadh susbaint-taisbeanaidh mheasgaichte "%1$S"
 
 # CORS
-CrossSiteRequestBlocked=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. This can be fixed by moving the resource to the same domain or enabling CORS.
+# LOCALIZATION NOTE: Do not translate "Access-Control-Allow-Origin", Access-Control-Allow-Credentials, Access-Control-Allow-Methods, Access-Control-Allow-Headers
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Shònraich an làrach seo bann-cinn Strict-Transport-Security nach eil dligheach.
