--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -185,9 +185,6 @@ offlineApps.dontAllow2=Na ceadaich
 # site settings dialog.
 offlineApps.storeOfflineData=Stòir dàta far loidhne
 
-# IndexedDB Quota increases
-indexedDBQuota.wantsTo=Tha %S ag iarraidh dàta a stòradh air an uidheam agad a chum cleachdadh far loidhne.
-
 # LOCALIZATION NOTE (password.savePassword): Label that will be used in
  # site settings dialog.
 password.savePassword=Sàbhail am facal-faire
@@ -364,9 +361,10 @@ getUserMedia.sharingCamera.message2 = Tha an camara air
 getUserMedia.sharingMicrophone.message2 = Tha am micreofon air
 getUserMedia.sharingCameraAndMicrophone.message2 = Tha an camara 's am micreofon air
 
-#Reader mode
-readerMode.enter = Tòisich air a' mhodh leughaidh
-readerMode.exit = Fàg am modh leughaidh
+#Reader view
+
+# LOCALIZATION NOTE (readerMode.toolbarTip):
+# Tip shown to users the first time we hide the reader mode toolbar.
 
 #Open in App
 openInApp.pageAction = Fosgail san aplacaid
