--- a/toolkit/chrome/global/browser.properties
+++ b/toolkit/chrome/global/browser.properties
@@ -8,3 +8,6 @@ browsewithcaret.checkLabel=Cuiridh tu brabhsadh le cùrsair air is dheth le F7. 
 browsewithcaret.checkButtonLabel=Tha
 
 plainText.wordWrap=Paisg loidhnichean fada
+
+formPostSecureToInsecureWarning.title = Rabhadh tèarainteachd
+formPostSecureToInsecureWarning.continue = Lean air adhart
