--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -13,7 +13,6 @@ droponhomemsg=A bheil thu ag iarraidh an sgrìobhainn seo mar an duilleag-dhacha
 # LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
 contextMenuSearch=Lorg le %1$S airson "%2$S"
-contextMenuSearch.accesskey=S
 
 # bookmark dialog strings
 
@@ -24,11 +23,9 @@ xpinstallPromptAllowButton=Ceadaich
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
 # See http://www.mozilla.org/access/keyboard/accesskey for details
-xpinstallPromptAllowButton.accesskey=a
 xpinstallDisabledMessageLocked=Chuir rianaire an t-siostaim agad casg air stàladh bathair-bhuig.
 xpinstallDisabledMessage=Chan eil stàladh bathair-bhuig an comas an-dràsta. Briog air "Cuir an comas" agus feuch ris a-rithist.
 xpinstallDisabledButton=Cuir an comas
-xpinstallDisabledButton.accesskey=n
 
 # LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
 # Semicolon-separated list of plural forms. See:
@@ -37,7 +34,6 @@ xpinstallDisabledButton.accesskey=n
 addonDownloading=Tha tuilleadan 'ga luchdadh a-nuas;Tha tuilleadan 'gan luchdadh a-nuas
 addonDownloadCancelled=Chaidh sgur de luchdadh a-nuas an tuilleadain.;Chaidh sgur de luchdadh a-nuas nan tuilleadan.
 addonDownloadRestart=Ath-thòisich air a luchdadh a-nuas;Ath-thòisich air an luchdadh a-nuas
-addonDownloadRestart.accessKey=R
 addonDownloadCancelTooltip=Sguir dheth
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
@@ -47,7 +43,6 @@ addonDownloadCancelTooltip=Sguir dheth
 addonsInstalled=Chaidh #1 tuilleadan a stàladh gu soirbheachail.;Chaidh #2 thuilleadan a stàladh gu soirbheachail.;Chaidh #2 tuilleadain a stàladh gu soirbheachail.;Chaidh #2 tuilleadan a stàladh gu soirbheachail.
 addonsInstalledNeedsRestart=Thèid #1 tuilleadan a stàladh as dèidh dhut #3 ath-thòiseachadh.;Thèid #1 thuilleadan a stàladh as dèidh dhut #3 ath-thòiseachadh.;Thèid #1 tuilleadain a stàladh as dèidh dhut #3 ath-thòiseachadh.;Thèid #1 tuilleadan a stàladh as dèidh dhut #3 ath-thòiseachadh.
 addonInstallRestartButton=Ath-thòisich an-dràsta
-addonInstallRestartButton.accesskey=r
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
@@ -62,36 +57,27 @@ addonError-4=Cha do ghabh #1 a stàladh a chionn 's nach urrainn do #3 am faidhl
 addonLocalError-1=Cha do ghabh an tuilleadan seo a stàladh air sgàth mearachd ann an siostam nam faidhle.
 addonLocalError-2=Cha do ghabh an tuilleadan seo a stàladh a chionn 's nach eil e a' freagairt ris an tuilleadan a bha dùil aig #3 ris.
 addonLocalError-3=Cha do ghabh an tuilleadan seo a stàladh a chionn 's gu bheil e truaillte a-rèir coltais.
-addonLocalError-4=Cha do ghabh #1 a stàladh a chionn 's nach urrainn do #3 am faidhle atharrachadh a dh'fheumas e atharrachadh.
 addonErrorIncompatible=Cha do ghabh #1 a stàladh a chionn 's nach eil e co-chòrdail le #3 #4.
 addonErrorBlocklisted=Cha do ghabh #1 a stàladh a chionn 's bheil cunnart mòr gun adhbharaich e duilgheadasan seasmhachd no tèarainteachd.
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Dh'fheuch an làrach seo (%S) ri coltas a shuidheachadh.
-lwthemeInstallRequest.allowButton=Ceadaich
-lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Chaidh coltas ùr a stàladh.
 lwthemePostInstallNotification.undoButton=Neo-dhèan
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Rianaich na coltasan…
-lwthemePostInstallNotification.manageButton.accesskey=R
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
 lwthemeNeedsRestart.message=Thèid %S a stàladh às dèidh dhut ath-thòiseachadh.
-lwthemeNeedsRestart.button=Ath-thòisich an-dràsta
-lwthemeNeedsRestart.accesskey=R
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
 popupWarning.message=Cha do leig #1 leis an làrach seo priob-uinneag fhosgladh.;Cha do leig #1 leis an làrach seo #2 phriob-uinneag fhosgladh.;Cha do leig #1 leis an làrach seo #2 priob-uinneagan fhosgladh.;Cha do leig #1 leis an làrach seo #2 priob-uinneag fhosgladh.
 popupWarningButton=Roghainnean
-popupWarningButton.accesskey=o
 popupWarningButtonUnix=Roghainnean
-popupWarningButtonUnix.accesskey=R
 popupAllow=Ceadaich priob-uinneagan do %S
 popupBlock=Cuir bacadh air priob-uinneagan o %S
 popupWarningDontShowFromMessage=Na seall an teachdaireachd seo ma tha bacadh air priob-uinneagan
@@ -117,9 +103,7 @@ crashedpluginsMessage.learnMore=Tuilleadh eòlais…
 # whether he rather wanted to visit the host.  %S is the recognized host.
 keywordURIFixup.message=An robh thu an dùil tadhal air %S?
 keywordURIFixup.goTo=Bha, nach stiùir sibh mi gu %S?
-keywordURIFixup.goTo.accesskey=B
 keywordURIFixup.dismiss=Cha robh, tapadh leibh
-keywordURIFixup.dismiss.accesskey=C
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -127,7 +111,6 @@ keywordURIFixup.dismiss.accesskey=C
 # is the site domain.
 pluginActivateNew.message=A bheil thu airson cead a thoirt dha %2$S "%1$S" a ruith?
 pluginActivateMultiple.message=A bheil thu airson cead a thoirt dha %S plugain a ruith?
-pluginActivate.learnMore=Barrachd fiosrachaidh…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
@@ -149,7 +132,6 @@ pluginActivateDisabled.manage=Rianaich na plugain…
 pluginEnabled.message=Tha "%S" an comas air %S.
 pluginEnabledOutdated.message=Tha am plugan "%S" 's e ro aosta an comas air %S.
 pluginEnabledVulnerable.message=Tha am plugan "%S" 's e mì-shàbhailte an comas air %S.
-pluginInfo.unknownPlugin=Neo-aithnichte
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
@@ -236,8 +218,6 @@ tabHistory.goForward=Rach air adhart dhan duilleag seo
 pasteAndGo.label=Cuir ann ┐ falbh
 
 # Block autorefresh
-refreshBlocked.goButton=Ceadaich
-refreshBlocked.goButton.accesskey=a
 refreshBlocked.refreshLabel=Cha do leig %S leis an duilleag seo ath-luchdadh gu fèin-obrachail.
 refreshBlocked.redirectLabel=Cha do leig %S leis an duilleag seo do stiùireadh gu duilleag eile gu fèin-obrachail.
 
@@ -275,20 +255,11 @@ newTabButton.tooltip=Fosgail taba ùr (%S)
 
 # Offline web applications
 offlineApps.available=Tha an làrach seo (%S) ag iarraidh dàta a shàbhaladh air a' choimpiutair agad a chum cleachdadh far loidhne.
-offlineApps.allow=Ceadaich
-offlineApps.allowAccessKey=A
 offlineApps.never=Chan ann air an duilleag seo idir
-offlineApps.neverAccessKey=e
 offlineApps.notNow=Chan ann an-dràsta
-offlineApps.notNowAccessKey=N
 
 offlineApps.usage=Tha barrachd air %SMB de dhàta 'ga shàbhaladh aig an làrach-lìn seo (%S) a chum cleachdadh far loidhne a-nis.
 offlineApps.manageUsage=Seall na roghainnean
-offlineApps.manageUsageAccessKey=S
-
-# LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
-# %2$S a number of megabytes.
-indexedDB.usage=Tha an làrach-lìn seo (%1$S) a' feuchainn ri barrachd air %2$S MB de dhàta a shàbhaladh air a' choimpiutair agad a chum cleachdadh far loidhne.
 
 identity.identified.verifier=Dearbhaichte le: %S
 identity.identified.verified_by_you=Chuir thu ris eisgeachd tèarainteachd airson na làraich seo.
@@ -308,7 +279,6 @@ identity.chrome='S e duilleag %S thèarainte a tha seo.
 editBookmarkPanel.pageBookmarkedTitle=Chaidh comharra-lìn a chruthachadh
 editBookmarkPanel.pageBookmarkedDescription=Cumaidh %S an duilleag seo 'na chuimhne dhut an-còmhnaidh.
 editBookmarkPanel.bookmarkedRemovedTitle=Comharra-lìn air a thoirt air falbh
-editBookmarkPanel.editBookmarkTitle=Deasaich an comharra-lìn seo
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -330,30 +300,21 @@ puAlertText=Briog an-seo airson mion-fhiosrachadh
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.alwaysShareLocation geolocation.neverShareLocation):
 #If you're having trouble with the word Share, please use Allow and Block in your language.
 geolocation.shareLocation=Nochd d' àite
-geolocation.shareLocation.accesskey=N
 geolocation.alwaysShareLocation=Nochd d' àite an-còmhnaidh
-geolocation.alwaysShareLocation.accesskey=o
 geolocation.neverShareLocation=Na nochd d' àite idir
-geolocation.neverShareLocation.accesskey=a
 geolocation.shareWithSite=A bheil thu airson d' àite a nochdadh ri %S?
 geolocation.shareWithFile=A bheil thu airson d' àite a nochdadh ris an fhaidhle %S?
 
 webNotifications.showForSession=Seall rè an t-seisein seo
-webNotifications.showForSession.accesskey=s
 webNotifications.alwaysShow=Seall na brathan an-còmhnaidh
-webNotifications.alwaysShow.accesskey=A
 webNotifications.neverShow=Seall na brathan casgaidh an-còmhnaidh
-webNotifications.neverShow.accesskey=N
 webNotifications.showFromSite=A bheil thu airson brathan %S fhaicinn?
 
 # Pointer lock UI
 
 pointerLock.allow2=Cuir an tomhaire am falach
-pointerLock.allow2.accesskey=H
 pointerLock.alwaysAllow=Ceadaich a chur am falach an-còmhnaidh
-pointerLock.alwaysAllow.accesskey=A
 pointerLock.neverAllow=Na ceadaich a chur am falach idir
-pointerLock.neverAllow.accesskey=N
 pointerLock.title2=A bheil thu airson cead a thoirt an tomhaire a chur am falach air %S?
 pointerLock.autoLock.title2=Falaichidh %S an tomhaire.
 
@@ -418,7 +379,6 @@ syncPromoNotification.bookmarks.description='S urrainn dhut na comharran-lìn ag
 # the remember password panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
 syncPromoNotification.passwords.description='S urrainn dhut na faclan-faire agad fhaighinn air gach uidheam agad air a bheil %S.\u0020
-syncPromoNotification.learnMoreLinkText=Barrachd fiosrachaidh
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
@@ -435,17 +395,16 @@ dataReportingNotification.message       = Cuiridh %1$S beagan dàta dha %2$S ach
 dataReportingNotification.button.label  = Co-dhùin na thèid a cho-roinneadh
 dataReportingNotification.button.accessKey  = C
 
+# Process hang reporter
+
 # Webapps notification popup
 webapps.install = Stàlaich
-webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = A bheil thu airson "%1$S" a stàladh on làrach seo (%2$S)?
 webapps.install.success = Aplacaid air a stàladh
 webapps.install.inprogress = 'Ga stàladh
 webapps.uninstall = Dì-stàlaich
-webapps.uninstall.accesskey = U
 webapps.doNotUninstall = Na dì-stàlaich
-webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = A bheil thu airson "%1$S" a dhì-stàladh?
 
@@ -458,7 +417,6 @@ fullscreen.rememberDecision=Cuimhnich mo cho-dhùnadh mu %S
 fullscreenButton.tooltip=Seall an uinneag air an làn-sgrìn (%S)
 
 service.toolbarbutton.label=Seirbheisean
-service.toolbarbutton.tooltiptext=Seirbheisean
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=A bheil thu airson na seirbheisean o %1$S a chur an comas ach am faic thu iad air bàr-inneal is bàr-taoibh %2$S agad?
@@ -590,6 +548,23 @@ getUserMedia.sharingMenuMicrophoneWindow = %S (micreofon is uinneag)
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Chan eil fhios cò às a thàinig e
 
+# LOCALIZATION NOTE(emeNotifications.drmContentPlaying.message2): %S is brandShortName.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentDisabled.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S will be the 'learn more' link
+# LOCALIZATION NOTE(emeNotifications.drmContentDisabled.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMInsufficientVersion.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMInstalling.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
+
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.64bit.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
+# LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.unsupportedOS.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S is the name of the user's OS (Windows, Linux, Mac OS X), %3$S will be the 'learn more' link
+
+
+
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Tha coltas gu bheil %S slaodach… a'… tòiseachadh.
 slowStartup.helpButton.label = Fiosrach mar a chuireas tu greas air
@@ -597,6 +572,7 @@ slowStartup.helpButton.accesskey = F
 slowStartup.disableNotificationButton.label = Na innis dhomh a-rithist
 slowStartup.disableNotificationButton.accesskey = a
 
+# LOCALIZATION NOTE  - %S is brandShortName
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
@@ -613,3 +589,11 @@ appmenu.restartNeeded.description = Ath-thòisich %S gus na h-ùrachaidhean a ch
 appmenu.updateFailed.description = Dh'fhàillig an t-ùrachadh sa chùlaibh, nach luchdaich thu a-nuas e thu fhèin?
 appmenu.restartBrowserButton.label = Ath-thòisich %S
 appmenu.downloadUpdateButton.label = Luchdaich a-nuas an t-ùrachadh
+
+# Pre-landed string for bug 1124153
+# LOCALIZATION NOTE(readingList.sidebar.showMore.tooltip): %S is the number of items that will be added by clicking this button
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Pre-landed strings for bug 1131457 / bug 1131461
+# Pre-landed strings for bug 1133610 & bug 1133611
+# LOCALIZATION NOTE(readingList.promo.noSync.label): %S a link, using the text from readingList.promo.noSync.link
