--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -7,35 +7,14 @@
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
 clientShortname2=Firefox Hello
+clientSuperShortname=Hello
+
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Gabh pàirt sa chòmhradh
 first_time_experience_button_label=Dèan toiseach-tòiseachaidh
 
-share_link_header_text=Co-roinn an ceangal seo ma tha thu airson cuireadh còmhraidh a thoirt do chuideigin:
 invite_header_text=Thoir cuireadh do chuideigin a thighinn an-seo.
-
-## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Click the label icon at the end of the url field.
-invitee_name_label=Cò dha a tha thu a' toirt cuireadh?
-## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
-## the expiry time. Click the label icon at the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} latha;Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} latha;Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} làithean;Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} latha
-## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
-## the expiry time. Click the label icon are the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} uair a thìde;Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} uair a thìde;Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} uairean a thìde;Falbhaidh an ùine air a' chuireadh ann an {{expiry_time}} uair a thìde
 
 # Status text
 display_name_guest=Aoigh
@@ -62,13 +41,10 @@ problem_accessing_account=Bha duilgheas a' faighinn cothrom air a' chunntas agad
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Feuch ris a-rithist
 
-share_email_subject4={{clientShortname}} — Nach gabh thu pàirt ann?
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
-## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Shin thu!\n\nNach dig thu a bhruidhinn rium ann an còmhradh video slighe {{clientShortname}}?\n\nChan eil feum air stàladh sam bith. Cha leig thu leas ach lethbhreac a dhèanamh dhen URL seo 's a chur dhan bhrabhsair agad:\n\n{{callUrl}}\n\nMa lùigeas tu, gheibh thu barrachd fiosrachaidh air {{clientShortname}} aig {{learnMoreUrl}}\n\nNa bi fada!
-share_button=Post-d
+## part between {{..}} and leave the \n\n part alone
+
 share_button2=Cuir an ceangal air a' phost-d
-copy_url_button=Copy
 copy_url_button2=Dèan lethbhreac dhen cheangal
 copied_url_button=Chaidh lethbhreac a dhèanamh!
 
@@ -120,6 +96,11 @@ add_or_import_contact_title=Cuir ris no ion-phortaich neach-aithne
 ## for where these appear on the UI
 import_contacts_button=Ion-phortaich
 importing_contacts_progress_button=Ag ion-phortadh…
+## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
+## when user's contacts have been successfully imported.
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Sioncronaich an luchd-aithne
@@ -180,6 +161,11 @@ audio_call_menu_button=Còmhraidh beòil
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 video_call_menu_button=Còmhradh video
+
+## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
+## replaced with a link with the text content of gravatars_promo_message_learnmore.
+gravatars_promo_message_learnmore=Barrachd fiosrachaidh
+gravatars_promo_button_nothanks=Na ùraich, mòran taing
 
 # Conversation Window Strings
 
@@ -270,12 +256,10 @@ powered_by_beforeLogo=Le cumhachd
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Ciamar a bha an còmhradh?
-feedback_what_makes_you_sad=Dè rinn sinn cearr?
 feedback_thank_you_heading=Mòran taing airson innse dhuinn dè do bheachd!
 feedback_category_audio_quality=Càileachd na fuaime
 feedback_category_video_quality=Càileachd a' video
 feedback_category_was_disconnected=Bhris an ceangal
-feedback_category_confusing=Ro thoinnte
 feedback_category_other2=Eile
 feedback_custom_category_text_placeholder=Dè chaidh cearr?
 feedback_submit_button=Cuir
@@ -322,3 +306,7 @@ rooms_room_full_call_to_action_label=Barrachd fiosrachaidh air {{clientShortname
 rooms_room_joined_label=Tha cuideigin ùr sa chòmhradh a-nis!
 rooms_room_join_label=Gabh pàirt sa chòmhradh
 rooms_signout_alert=Thèid gach còmhradh fosgailte a dhùnadh
+
+# Infobar strings
+
+infobar_button_gotit_label=Tha mi agaibh a-nis!
