--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -34,3 +34,4 @@ phishingBlocked=Chaidh aithris gur e fallsaidheachd-lìn a tha san duilleag aig 
 cspBlocked=Tha poileasaidh tèarainteachd susbainte aig an duilleag seo a tha a' cur casg air luchdadh air an dòigh seo.
 corruptedContentError=Cha ghabh an duilleag a dh'iarr thu a shealltainn a chionn 's gun deach mearachd a lorg ann an tar-chur an dàta.
 remoteXUL=Tha an duilleag seo a' cleachdadh teicneolas nach eil taic ann ris tuilleadh a ghnàth ann am Firefox.
+## LOCALIZATION NOTE (sslv3Used) - Do not translate "%S".
