--- a/dom/chrome/plugins.properties
+++ b/dom/chrome/plugins.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # LOCALIZATION NOTE (plugins.properties):
-#    Those strings are inserted into an HTML page, so you all HTML characters
+#    Those strings are inserted into an HTML page, so all HTML characters
 #    have to be escaped in a way that they show up correctly in HTML!
 
 title_label=Mu na plugain
@@ -20,5 +20,8 @@ mimetype_label=Seòrsa MIME
 description_label=Tuairisgeul
 suffixes_label=Leasachain
 
+# GMP Plugins
+
 openH264_name=OpenH264 Video Codec 'ga sholar le Cisco Systems, Inc.
 openH264_description=Cluich video-lìn is cleachd cabadaich video.
+
