[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -164,8 +164,10 @@ video_call_menu_button=Còmhradh video
 
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
+gravatars_promo_message='S urrainn dhut ìomhaigheagan phròifilean a chur ris an luchd-aithne agad gu fèin-obrachail 's tu a' nochdadh an cuid phost-d dha Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Barrachd fiosrachaidh
 gravatars_promo_button_nothanks=Na ùraich, mòran taing
+gravatars_promo_button_use=Cleachd ìomhaigheagan phròifilean
 
 # Conversation Window Strings
 
@@ -183,6 +185,10 @@ mute_local_audio_button_title=Mùch an fhuaim agad
 unmute_local_audio_button_title=Till an fhuaim agad
 mute_local_video_button_title=Mùch a' video agad
 unmute_local_video_button_title=Till a' video agad
+active_screenshare_button_title=Sguir dhen cho-roinneadh
+inactive_screenshare_button_title=Co-roinn an sgrìn
+share_tabs_button_title=Co-roinn na tabaichean agam
+share_windows_button_title=Co-roinn uinneagan eile
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
@@ -257,9 +263,11 @@ powered_by_afterLogo=
 
 feedback_call_experience_heading2=Ciamar a bha an còmhradh?
 feedback_thank_you_heading=Mòran taing airson innse dhuinn dè do bheachd!
+feedback_category_list_heading=Dè rinn dubhach thu?
 feedback_category_audio_quality=Càileachd na fuaime
 feedback_category_video_quality=Càileachd a' video
 feedback_category_was_disconnected=Bhris an ceangal
+feedback_category_confusing2=Uidheaman-smachd toinnte
 feedback_category_other2=Eile
 feedback_custom_category_text_placeholder=Dè chaidh cearr?
 feedback_submit_button=Cuir
@@ -309,4 +317,8 @@ rooms_signout_alert=Thèid gach còmhradh fosgailte a dhùnadh
 
 # Infobar strings
 
+infobar_screenshare_browser_message=Chì daoine eile sa chòmhradh na tha air taba sam bith a bhriogas tu air.
 infobar_button_gotit_label=Tha mi agaibh a-nis!
+infobar_button_gotit_accesskey=G
+infobar_menuitem_dontshowagain_label=Na seall seo a-rithist
+infobar_menuitem_dontshowagain_accesskey=D
