--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -13,6 +13,9 @@ phishBeforeText=Ma thaghas tu an roghainn seo, thèid seòladh gach làraich-lì
 
 labelDefaultFont=Roghainn bhunaiteach (%S)
 
+veryLargeMinimumFontTitle=Ìos-mheud mòr airson cruthan-clò
+veryLargeMinimumFontWarning=Thagh thu ìos-mheud air leth mòr airson cruthan-clò (nas motha na 24 piogsail). Dh'fhaoidte gum bi e doirbh no do-dhèanta cuid a dhuilleagan roghainnean mar an tè seo a chleachdadh ri rinn sin.
+acceptVeryLargeMinimumFont=Glèidh na dh'atharraich mi co-dhiù
 
 #### Permissions Manager
 
