--- a/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -57,6 +57,7 @@ notification.installError=Thachair mearachd rè stàladh %1$S.
 notification.installError.retry=Feuch ris a-rithist
 notification.installError.retry.tooltip=Feuch ri luchdadh a-nuas is ri stàladh an tuilleadain seo a-rithist
 #LOCALIZATION NOTE (notification.gmpPending) %1$S is the add-on name.
+notification.gmpPending=Thèid %1$S stàladh a dh'aithghearr.
 
 #LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
 contributionAmount2=Na mholar a thabhartas: %S
@@ -99,6 +100,7 @@ details.notification.uninstall=Thèid %1$S a dhì-stàladh às dèidh dhut %2$S 
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
 details.notification.upgrade=Thèid %1$S ùrachadh às dèidh dhut %2$S ath-thòiseachadh.
 #LOCALIZATION NOTE (details.notification.gmpPending) %1$S is the add-on name
+details.notification.gmpPending=Thèid %1$S stàladh a dh'aithghearr.
 
 # LOCALIZATION NOTE (details.experiment.time.daysRemaining):
 # Semicolon-separated list of plural forms.
