--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -13,6 +13,7 @@ droponhomemsg=A bheil thu ag iarraidh an sgrìobhainn seo mar an duilleag-dhacha
 # LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
 contextMenuSearch=Lorg le %1$S airson "%2$S"
+contextMenuSearch.accesskey=S
 
 # bookmark dialog strings
 
@@ -23,9 +24,11 @@ xpinstallPromptAllowButton=Ceadaich
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
 # See http://www.mozilla.org/access/keyboard/accesskey for details
+xpinstallPromptAllowButton.accesskey=A
 xpinstallDisabledMessageLocked=Chuir rianaire an t-siostaim agad casg air stàladh bathair-bhuig.
 xpinstallDisabledMessage=Chan eil stàladh bathair-bhuig an comas an-dràsta. Briog air "Cuir an comas" agus feuch ris a-rithist.
 xpinstallDisabledButton=Cuir an comas
+xpinstallDisabledButton.accesskey=n
 
 # LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
 # Semicolon-separated list of plural forms. See:
@@ -34,6 +37,7 @@ xpinstallDisabledButton=Cuir an comas
 addonDownloading=Tha tuilleadan 'ga luchdadh a-nuas;Tha tuilleadan 'gan luchdadh a-nuas
 addonDownloadCancelled=Chaidh sgur de luchdadh a-nuas an tuilleadain.;Chaidh sgur de luchdadh a-nuas nan tuilleadan.
 addonDownloadRestart=Ath-thòisich air a luchdadh a-nuas;Ath-thòisich air an luchdadh a-nuas
+addonDownloadRestart.accessKey=R
 addonDownloadCancelTooltip=Sguir dheth
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
@@ -43,6 +47,7 @@ addonDownloadCancelTooltip=Sguir dheth
 addonsInstalled=Chaidh #1 tuilleadan a stàladh gu soirbheachail.;Chaidh #2 thuilleadan a stàladh gu soirbheachail.;Chaidh #2 tuilleadain a stàladh gu soirbheachail.;Chaidh #2 tuilleadan a stàladh gu soirbheachail.
 addonsInstalledNeedsRestart=Thèid #1 tuilleadan a stàladh as dèidh dhut #3 ath-thòiseachadh.;Thèid #1 thuilleadan a stàladh as dèidh dhut #3 ath-thòiseachadh.;Thèid #1 tuilleadain a stàladh as dèidh dhut #3 ath-thòiseachadh.;Thèid #1 tuilleadan a stàladh as dèidh dhut #3 ath-thòiseachadh.
 addonInstallRestartButton=Ath-thòisich an-dràsta
+addonInstallRestartButton.accesskey=R
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
@@ -57,27 +62,36 @@ addonError-4=Cha do ghabh #1 a stàladh a chionn 's nach urrainn do #3 am faidhl
 addonLocalError-1=Cha do ghabh an tuilleadan seo a stàladh air sgàth mearachd ann an siostam nam faidhle.
 addonLocalError-2=Cha do ghabh an tuilleadan seo a stàladh a chionn 's nach eil e a' freagairt ris an tuilleadan a bha dùil aig #3 ris.
 addonLocalError-3=Cha do ghabh an tuilleadan seo a stàladh a chionn 's gu bheil e truaillte a-rèir coltais.
+addonLocalError-4=Cha b' urrainn dhuinn #1 a stàladh a chionn 's nach urrainn dha #3 am faidhle air a bheil feum atharrachadh.
 addonErrorIncompatible=Cha do ghabh #1 a stàladh a chionn 's nach eil e co-chòrdail le #3 #4.
 addonErrorBlocklisted=Cha do ghabh #1 a stàladh a chionn 's bheil cunnart mòr gun adhbharaich e duilgheadasan seasmhachd no tèarainteachd.
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Dh'fheuch an làrach seo (%S) ri coltas a shuidheachadh.
+lwthemeInstallRequest.allowButton=Ceadaich
+lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Chaidh coltas ùr a stàladh.
 lwthemePostInstallNotification.undoButton=Neo-dhèan
+lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Rianaich na coltasan…
+lwthemePostInstallNotification.manageButton.accesskey=M
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
 lwthemeNeedsRestart.message=Thèid %S a stàladh às dèidh dhut ath-thòiseachadh.
+lwthemeNeedsRestart.button=Ath-thòisich an-dràsta
+lwthemeNeedsRestart.accesskey=R
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
 popupWarning.message=Cha do leig #1 leis an làrach seo priob-uinneag fhosgladh.;Cha do leig #1 leis an làrach seo #2 phriob-uinneag fhosgladh.;Cha do leig #1 leis an làrach seo #2 priob-uinneagan fhosgladh.;Cha do leig #1 leis an làrach seo #2 priob-uinneag fhosgladh.
 popupWarningButton=Roghainnean
+popupWarningButton.accesskey=O
 popupWarningButtonUnix=Roghainnean
+popupWarningButtonUnix.accesskey=P
 popupAllow=Ceadaich priob-uinneagan do %S
 popupBlock=Cuir bacadh air priob-uinneagan o %S
 popupWarningDontShowFromMessage=Na seall an teachdaireachd seo ma tha bacadh air priob-uinneagan
@@ -103,7 +117,9 @@ crashedpluginsMessage.learnMore=Tuilleadh eòlais…
 # whether he rather wanted to visit the host.  %S is the recognized host.
 keywordURIFixup.message=An robh thu an dùil tadhal air %S?
 keywordURIFixup.goTo=Bha, nach stiùir sibh mi gu %S?
+keywordURIFixup.goTo.accesskey=Y
 keywordURIFixup.dismiss=Cha robh, tapadh leibh
+keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -111,6 +127,7 @@ keywordURIFixup.dismiss=Cha robh, tapadh leibh
 # is the site domain.
 pluginActivateNew.message=A bheil thu airson cead a thoirt dha %2$S "%1$S" a ruith?
 pluginActivateMultiple.message=A bheil thu airson cead a thoirt dha %S plugain a ruith?
+pluginActivate.learnMore=Barrachd fiosrachaidh…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
@@ -132,6 +149,7 @@ pluginActivateDisabled.manage=Rianaich na plugain…
 pluginEnabled.message=Tha "%S" an comas air %S.
 pluginEnabledOutdated.message=Tha am plugan "%S" 's e ro aosta an comas air %S.
 pluginEnabledVulnerable.message=Tha am plugan "%S" 's e mì-shàbhailte an comas air %S.
+pluginInfo.unknownPlugin=Neo-aithnichte
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
@@ -218,6 +236,8 @@ tabHistory.goForward=Rach air adhart dhan duilleag seo
 pasteAndGo.label=Cuir ann ┐ falbh
 
 # Block autorefresh
+refreshBlocked.goButton=Ceadaich
+refreshBlocked.goButton.accesskey=A
 refreshBlocked.refreshLabel=Cha do leig %S leis an duilleag seo ath-luchdadh gu fèin-obrachail.
 refreshBlocked.redirectLabel=Cha do leig %S leis an duilleag seo do stiùireadh gu duilleag eile gu fèin-obrachail.
 
@@ -255,11 +275,16 @@ newTabButton.tooltip=Fosgail taba ùr (%S)
 
 # Offline web applications
 offlineApps.available=Tha an làrach seo (%S) ag iarraidh dàta a shàbhaladh air a' choimpiutair agad a chum cleachdadh far loidhne.
+offlineApps.allow=Ceadaich
+offlineApps.allowAccessKey=A
 offlineApps.never=Chan ann air an duilleag seo idir
+offlineApps.neverAccessKey=e
 offlineApps.notNow=Chan ann an-dràsta
+offlineApps.notNowAccessKey=N
 
 offlineApps.usage=Tha barrachd air %SMB de dhàta 'ga shàbhaladh aig an làrach-lìn seo (%S) a chum cleachdadh far loidhne a-nis.
 offlineApps.manageUsage=Seall na roghainnean
+offlineApps.manageUsageAccessKey=S
 
 identity.identified.verifier=Dearbhaichte le: %S
 identity.identified.verified_by_you=Chuir thu ris eisgeachd tèarainteachd airson na làraich seo.
@@ -279,6 +304,7 @@ identity.chrome='S e duilleag %S thèarainte a tha seo.
 editBookmarkPanel.pageBookmarkedTitle=Chaidh comharra-lìn a chruthachadh
 editBookmarkPanel.pageBookmarkedDescription=Cumaidh %S an duilleag seo 'na chuimhne dhut an-còmhnaidh.
 editBookmarkPanel.bookmarkedRemovedTitle=Comharra-lìn air a thoirt air falbh
+editBookmarkPanel.editBookmarkTitle=Deasaich an comharra-lìn seo
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -300,14 +326,20 @@ puAlertText=Briog an-seo airson mion-fhiosrachadh
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.alwaysShareLocation geolocation.neverShareLocation):
 #If you're having trouble with the word Share, please use Allow and Block in your language.
 geolocation.shareLocation=Nochd d' àite
+geolocation.shareLocation.accesskey=a
 geolocation.alwaysShareLocation=Nochd d' àite an-còmhnaidh
+geolocation.alwaysShareLocation.accesskey=A
 geolocation.neverShareLocation=Na nochd d' àite idir
+geolocation.neverShareLocation.accesskey=N
 geolocation.shareWithSite=A bheil thu airson d' àite a nochdadh ri %S?
 geolocation.shareWithFile=A bheil thu airson d' àite a nochdadh ris an fhaidhle %S?
 
 webNotifications.showForSession=Seall rè an t-seisein seo
+webNotifications.showForSession.accesskey=s
 webNotifications.alwaysShow=Seall na brathan an-còmhnaidh
+webNotifications.alwaysShow.accesskey=A
 webNotifications.neverShow=Seall na brathan casgaidh an-còmhnaidh
+webNotifications.neverShow.accesskey=N
 webNotifications.showFromSite=A bheil thu airson brathan %S fhaicinn?
 
 # Pointer lock UI
@@ -404,7 +436,9 @@ webapps.requestInstall = A bheil thu airson "%1$S" a stàladh on làrach seo (%2
 webapps.install.success = Aplacaid air a stàladh
 webapps.install.inprogress = 'Ga stàladh
 webapps.uninstall = Dì-stàlaich
+webapps.uninstall.accesskey = U
 webapps.doNotUninstall = Na dì-stàlaich
+webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = A bheil thu airson "%1$S" a dhì-stàladh?
 
@@ -417,6 +451,7 @@ fullscreen.rememberDecision=Cuimhnich mo cho-dhùnadh mu %S
 fullscreenButton.tooltip=Seall an uinneag air an làn-sgrìn (%S)
 
 service.toolbarbutton.label=Seirbheisean
+service.toolbarbutton.tooltiptext=Seirbheisean
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=A bheil thu airson na seirbheisean o %1$S a chur an comas ach am faic thu iad air bàr-inneal is bàr-taoibh %2$S agad?
@@ -549,21 +584,37 @@ getUserMedia.sharingMenuMicrophoneWindow = %S (micreofon is uinneag)
 getUserMedia.sharingMenuUnknownHost = Chan eil fhios cò às a thàinig e
 
 # LOCALIZATION NOTE(emeNotifications.drmContentPlaying.message2): %S is brandShortName.
+emeNotifications.drmContentPlaying.message2 = Tha cuid dhen fhuaim no video air an làrach seo a' cleachdadh bathar-bog DRM agus dh'fhaoidte gun cuingich seo na 's urrainn dhut a dhèanamh leis ann am %S.
+emeNotifications.drmContentPlaying.button.label = Rèitich…
+emeNotifications.drmContentPlaying.button.accesskey = c
 
 # LOCALIZATION NOTE(emeNotifications.drmContentDisabled.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S will be the 'learn more' link
+emeNotifications.drmContentDisabled.message = Feumaidh tu DRM a chur an comas gus cuid dhen fhuaim no video air an duilleag seo a chluich. %S
+emeNotifications.drmContentDisabled.button.label = Cuir DRE an comas
+emeNotifications.drmContentDisabled.button.accesskey = E
 # LOCALIZATION NOTE(emeNotifications.drmContentDisabled.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+emeNotifications.drmContentDisabled.learnMoreLabel = Barrachd fiosrachaidh
 
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
+emeNotifications.drmContentCDMNotSupported.message = Tha an fhuaim no video air an duilleag seo feumach air bathar-bog DRM nach cuir %1$S taic ris. %2$S
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+emeNotifications.drmContentCDMNotSupported.learnMoreLabel = Barrachd fiosrachaidh
 
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMInsufficientVersion.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
+emeNotifications.drmContentCDMInsufficientVersion.message = Tha %S a' stàladh ùrachaidhean air a bheil feum gus an fhuaim no video air an duilleag seo a chluich. Feuch ris a-rithist an ceann greis.
 
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMInstalling.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
+emeNotifications.drmContentCDMInstalling.message = Tha %S a' stàladh co-phàirtean air a bheil feum gus an fhuaim no video air an duilleag seo a chluich. Feuch ris a-rithist an ceann greis.
 
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.64bit.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
+emeNotifications.drmContentCDMNotSupported.64bit.message = Feumaidh an fhuaim no video air an duilleag seo bathar-bog DRM nach cuir am build 64-bit seo de %1$S taic. %2$S
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.unsupportedOS.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S is the name of the user's OS (Windows, Linux, Mac OS X), %3$S will be the 'learn more' link
+emeNotifications.drmContentCDMNotSupported.unsupportedOS.message = Feumaidh an fhuaim no video air an duilleag seo bathar-bog DRM nach cuir %1$S taic taic ris air %2$S. %3$S
 
+emeNotifications.optionsButton.label = Roghainnean
+emeNotifications.optionsButton.accesskey = o
 
+emeNotifications.unknownDRMSoftware = Neo-aithnichte
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Tha coltas gu bheil %S slaodach… a'… tòiseachadh.
@@ -573,6 +624,9 @@ slowStartup.disableNotificationButton.label = Na innis dhomh a-rithist
 slowStartup.disableNotificationButton.accesskey = a
 
 # LOCALIZATION NOTE  - %S is brandShortName
+flashHang.message = Dh'atharraich %S cuid dhe na roghainnean aig Adobe Flash airson 's gun obraich e nas fhearr.
+flashHang.helpButton.label = Barrachd fiosrachaidh…
+flashHang.helpButton.accesskey = r
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
@@ -594,6 +648,8 @@ appmenu.downloadUpdateButton.label = Luchdaich a-nuas an t-ùrachadh
 # LOCALIZATION NOTE(readingList.sidebar.showMore.tooltip): %S is the number of items that will be added by clicking this button
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+readingList.sidebar.showMore.tooltip = Seall %S nì eile;Seall %S nì eile;Seall %S nithean eile;Seall %S nì eile
 # Pre-landed strings for bug 1131457 / bug 1131461
+readingList.urlbar.add = Cuir an duilleag ris an liosta-leughaidh
 # Pre-landed strings for bug 1133610 & bug 1133611
 # LOCALIZATION NOTE(readingList.promo.noSync.label): %S a link, using the text from readingList.promo.noSync.link
