--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -43,6 +43,7 @@ deleteOrphanCertTitle=Sguab às teisteanasan
 chooseP12RestoreFileDialog2=Faidhle teisteanais a tha ri ion-phortadh
 chooseP12BackupFileDialog=Ainm an fhaidhle a tha ri lethbhreac-ghlèidhidh
 file_browse_PKCS12_spec=Faidhlichean PKCS12
+getPKCS12FilePasswordMessage=Cuir a-steach am facal-faire a chleachd thu gus lethbhreac-glèidhidh an teisteanais seo a chrioptachadh:
 
 #Cert verification
 certVerified=Chaidh an teisteanas seo a dhearbhadh a chum na leanas:
@@ -69,6 +70,7 @@ pageInfo_Privacy_None3=Chan eil an duilleag a tha thu a' coimhead air air a chri
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_EncryptionWithBitsAndProtocol=Ceangal crioptaichte (%1$S, %2$S bit keys, %3$S)
+pageInfo_BrokenEncryption=Crioptachadh briste (%1$S, %2$S bit keys, %3$S)
 pageInfo_Privacy_Encrypted1=Chaidh an duilleag a tha thu a' coimhead air a chrioptachadh mus deach a chur a-nall thairis air an lìon.
 pageInfo_Privacy_Encrypted2=Bidh e doirbh do dhaoine gun ùghdarras fiosrachadh a tha a' siubhal eadar coimpiutairean fhaicinn ma chaidh a chrioptachadh. Mar sin, chan eil coltas gun leugh duine sam bith an duilleag seo 's e a' siubhal an lìonraidh.
 pageInfo_MixedContent=Ceangal air a chrioptachadh gu ìre
