--- a/toolkit/chrome/global/aboutReader.properties
+++ b/toolkit/chrome/global/aboutReader.properties
@@ -13,6 +13,7 @@ aboutReader.colorScheme.auto=Fèin-obrachail
 # LOCALIZATION NOTE (aboutReader.fontType.serif, aboutReader.fontType.sans-serif):
 # These are the styles of typeface that are options in the reader view controls.
 aboutReader.fontType.serif=Serif
+aboutReader.fontType.sans-serif=Sans-serif
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
 aboutReader.fontTypeSample=AaÀa
@@ -21,4 +22,7 @@ aboutReader.fontTypeSample=AaÀa
 # for the font size setting. Tapping different samples will change the font size.
 aboutReader.fontSizeSample=AÀ
 
+aboutReader.toolbar.close=Dùin sealladh an leughadair
+aboutReader.toolbar.typeControls=Uidheaman-smachd sgrìobhaidh
+aboutReader.toolbar.addToReadingList=Cuir ris an liosta leughaidh
 
