--- a/toolkit/chrome/global/browser.properties
+++ b/toolkit/chrome/global/browser.properties
@@ -10,4 +10,5 @@ browsewithcaret.checkButtonLabel=Tha
 plainText.wordWrap=Paisg loidhnichean fada
 
 formPostSecureToInsecureWarning.title = Rabhadh tèarainteachd
+formPostSecureToInsecureWarning.message = Thèid am fiosrachadh a chuir thu a-steach air an duilleag seo a chur a-null air ceangal gun chrioptachadh agus b' urrainn do threas pàrtaidh a leughadh furasta gu leòr.\n\nA bheil thu cinnteach gu bheil thu ag iarraidh am fiosrachadh seo a chur a-null?
 formPostSecureToInsecureWarning.continue = Lean air adhart
