[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -345,8 +345,11 @@ webNotifications.showFromSite=A bheil thu airson brathan %S fhaicinn?
 # Pointer lock UI
 
 pointerLock.allow2=Cuir an tomhaire am falach
+pointerLock.allow2.accesskey=H
 pointerLock.alwaysAllow=Ceadaich a chur am falach an-còmhnaidh
+pointerLock.alwaysAllow.accesskey=A
 pointerLock.neverAllow=Na ceadaich a chur am falach idir
+pointerLock.neverAllow.accesskey=N
 pointerLock.title2=A bheil thu airson cead a thoirt an tomhaire a chur am falach air %S?
 pointerLock.autoLock.title2=Falaichidh %S an tomhaire.
 
@@ -411,6 +414,7 @@ syncPromoNotification.bookmarks.description='S urrainn dhut na comharran-lìn ag
 # the remember password panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
 syncPromoNotification.passwords.description='S urrainn dhut na faclan-faire agad fhaighinn air gach uidheam agad air a bheil %S.\u0020
+syncPromoNotification.learnMoreLinkText=Barrachd fiosrachaidh
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
@@ -428,9 +432,13 @@ dataReportingNotification.button.label  = Co-dhùin na thèid a cho-roinneadh
 dataReportingNotification.button.accessKey  = C
 
 # Process hang reporter
+processHang.message = Tha duilleag-lìn a' dèanamh %1$S slaodach. Dè bu toigh leat dèanamh?
+processHang.button.label = Roghainnean
+processHang.button.accessKey = o
 
 # Webapps notification popup
 webapps.install = Stàlaich
+webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = A bheil thu airson "%1$S" a stàladh on làrach seo (%2$S)?
 webapps.install.success = Aplacaid air a stàladh
@@ -651,5 +659,11 @@ appmenu.downloadUpdateButton.label = Luchdaich a-nuas an t-ùrachadh
 readingList.sidebar.showMore.tooltip = Seall %S nì eile;Seall %S nì eile;Seall %S nithean eile;Seall %S nì eile
 # Pre-landed strings for bug 1131457 / bug 1131461
 readingList.urlbar.add = Cuir an duilleag ris an liosta-leughaidh
+readingList.urlbar.addDone = Chaidh an duilleag a chur ris an liosta leughaidh
+readingList.urlbar.remove = Thoir an duilleag air falbh on liosta leughaidh
+readingList.urlbar.removeDone = Chaidh an duilleag a thoirt air falbh on liosta leughaidh
 # Pre-landed strings for bug 1133610 & bug 1133611
 # LOCALIZATION NOTE(readingList.promo.noSync.label): %S a link, using the text from readingList.promo.noSync.link
+readingList.promo.noSync.label = Faigh cothrom air an liosta leughadh agad air na h-uidheaman uile agad. %S
+readingList.promo.noSync.link = Tòisich air an t-sioncronachadh.
+readingList.promo.hasSync.label = Gheibh thu cothrom air an liosta leughadh agad air gach uidheam a tha ceangailte ris an t-sioncronachadh a-nis.
