--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -9,9 +9,12 @@
 clientShortname2=Firefox Hello
 clientSuperShortname=Hello
 
+rooms_tab_button_tooltip=Còmhraidhean
+contacts_tab_button_tooltip=Luchd-aithne
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Gabh pàirt sa chòmhradh
 first_time_experience_button_label=Dèan toiseach-tòiseachaidh
 
 invite_header_text=Thoir cuireadh do chuideigin a thighinn an-seo.
@@ -41,6 +44,7 @@ problem_accessing_account=Bha duilgheas a' faighinn cothrom air a' chunntas agad
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Feuch ris a-rithist
 
+share_email_subject5={{clientShortname2}} — Gabh pàirt sa chòmhradh
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
 
@@ -96,11 +100,13 @@ add_or_import_contact_title=Cuir ris no ion-phortaich neach-aithne
 ## for where these appear on the UI
 import_contacts_button=Ion-phortaich
 importing_contacts_progress_button=Ag ion-phortadh…
+import_contacts_failure_message=Cha b' urrainn dhuinn cuid dhen luchd-aithne ion-phortadh. Feuch ris a-rithist.
 ## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
 ## when user's contacts have been successfully imported.
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+import_contacts_success_message=Chaidh an luchd-aithne ion-phortadh ({{total}}).;Chaidh an luchd-aithne ion-phortadh ({{total}}).;Chaidh an luchd-aithne ion-phortadh ({{total}}).;Chaidh an luchd-aithne ion-phortadh ({{total}}).
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Sioncronaich an luchd-aithne
