--- a/dom/chrome/plugins.properties
+++ b/dom/chrome/plugins.properties
@@ -21,7 +21,10 @@ description_label=Tuairisgeul
 suffixes_label=Leasachain
 
 # GMP Plugins
+gmp_license_info=Fiosrachadh mun cheadachas
 
 openH264_name=OpenH264 Video Codec 'ga sholar le Cisco Systems, Inc.
 openH264_description=Cluich video-lìn is cleachd cabadaich video.
 
+eme-adobe_name=Tha Primetime Content Decryption Module air a sholar le Adobe Systems, Incorporated
+eme-adobe_description=Cluich a' video-lìn dìonta.
