--- a/toolkit/chrome/global/aboutReader.properties
+++ b/toolkit/chrome/global/aboutReader.properties
@@ -26,3 +26,4 @@ aboutReader.toolbar.close=Dùin sealladh an leughadair
 aboutReader.toolbar.typeControls=Uidheaman-smachd sgrìobhaidh
 aboutReader.toolbar.addToReadingList=Cuir ris an liosta leughaidh
 
+aboutReader.footer.deleteThisArticle=Sguab às an t-artaigil seo
