--- a/toolkit/chrome/global/devtools/debugger.properties
+++ b/toolkit/chrome/global/devtools/debugger.properties
@@ -16,6 +16,7 @@ remoteIncomingPromptTitle=Ceangal a' tighinn a-steach
 
 # LOCALIZATION NOTE (remoteIncomingPromptHeader): Header displayed on the
 # dialog that prompts the user to allow the incoming connection.
+remoteIncomingPromptHeader=An incoming request to permit remote debugging connection was detected. A remote client can take complete control over your browser!
 # LOCALIZATION NOTE (remoteIncomingPromptClientEndpoint): Part of the prompt
 # dialog for the user to choose whether an incoming connection should be
 # allowed.
