--- a/browser/chrome/browser/devtools/profiler.properties
+++ b/browser/chrome/browser/devtools/profiler.properties
@@ -97,6 +97,7 @@ table.root=(root)
 
 # LOCALIZATION NOTE (table.idle):
 # This string is displayed in the call tree for the idle blocks.
+table.idle=(idle)
 
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
