--- a/dom/chrome/appstrings.properties
+++ b/dom/chrome/appstrings.properties
@@ -33,3 +33,4 @@ phishingBlocked=Chaidh aithris gur e fallsaidheachd-lìn a tha san duilleag aig 
 cspBlocked=Tha poileasaidh tèarainteachd susbainte aig an duilleag seo a tha a' cur casg air luchdadh air an dòigh seo.
 corruptedContentError=Cha ghabh an duilleag a dh'iarr thu a shealltainn a chionn 's gun deach mearachd a lorg ann an tar-chur an dàta.
 remoteXUL=Tha an duilleag seo a' cleachdadh teicneolas nach eil taic ann ris tuilleadh a ghnàth.
+sslv3Used=Cha b' urrainnear barantas a thoirt gum bi an dàta agad tèarainte air %S a chionn 's gu bheil e a' cleachdadh SSLv3, pròtacal tèarainteachd briste.
