[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -47,6 +47,7 @@ retry_button=Feuch ris a-rithist
 share_email_subject5={{clientShortname2}} — Gabh pàirt sa chòmhradh
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body5=Shin thu!\n\nNach dig thu a bhruidhinn rium slighe còmhradh video air {{clientShortname2}}.\n\nSin an dòigh as fhasa airson còmhradh video a dhèanamh le duine sam bith, àite sam bith.  Le {{clientSuperShortname}}, cha leig thu leas dad a luchdadh a-nuas no a stàladh. Briog air a cheangal no cuir dhan bhrabhsair {{brandShortname}}, Opera no Chrome e gus pàirt a ghabhail sa chòmhradh:\n\n{{callUrl}}\n\nAirson barrachd fiosrachaidh air {{clientSuperShortname}} agus mar a thòisicheas tu còmhradh video thu fhèin, tadhail air {{learnMoreUrl}}\n\nNa bi fada gun bhruidhinn rium!
 
 share_button2=Cuir an ceangal air a' phost-d
 copy_url_button2=Dèan lethbhreac dhen cheangal
