[gd] update from Pootle (firefox)

--- a/toolkit/chrome/global/aboutReader.properties
+++ b/toolkit/chrome/global/aboutReader.properties
@@ -25,5 +25,9 @@ aboutReader.fontSizeSample=AÀ
 aboutReader.toolbar.close=Dùin sealladh an leughadair
 aboutReader.toolbar.typeControls=Uidheaman-smachd sgrìobhaidh
 aboutReader.toolbar.addToReadingList=Cuir ris an liosta leughaidh
+aboutReader.toolbar.removeFromReadingList=Thoir air falbh on liosta leughaidh
+aboutReader.toolbar.openReadingList=Fosgail an liosta leughaidh
+aboutReader.toolbar.closeReadingList=Dùin an liosta leughaidh
+aboutReader.toolbar.share=Co-roinn
 
 aboutReader.footer.deleteThisArticle=Sguab às an t-artaigil seo
