--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -5,7 +5,10 @@ BlockMixedActiveContent = Chuir sinn casg air luchdadh susbaint-taisbeanaidh mhe
 
 # CORS
 # LOCALIZATION NOTE: Do not translate "Access-Control-Allow-Origin", Access-Control-Allow-Credentials, Access-Control-Allow-Methods, Access-Control-Allow-Headers
-CORSMissingAllowOrigin=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: CORS header 'Access-Control-Allow-Origin' missing).
+CORSDisabled=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Tha CORS à comas).
+CORSRequestFailed=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Dh'fhàillig an t-iarrtas CORS).
+CORSRequestNotHttp=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Chan e http a tha san CORS).
+CORSMissingAllowOrigin=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Tha am bann-cinn CORS "Access-Control-Allow-Origin" a dhìth).
 CORSAllowOriginNotMatchingOrigin=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: CORS header 'Access-Control-Allow-Origin' does not match '%2$S').
 CORSMethodNotFound=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: Did not find method in CORS header 'Access-Control-Allow-Methods').
 CORSMissingAllowCredentials=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: expected 'true' in CORS header 'Access-Control-Allow-Credentials').
