[gd] update from Pootle (mobile)

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -41,22 +41,22 @@ downloadCancelPromptMessage=A bheil thu airson sgur dhen luchdadh a-nuas seo?
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
 # #1 is the add-on name, #2 is the add-on host, #3 is the application name
-addonError-1=Cha do ghabh an tuilleadan seo a luchdadh a-nuas a chionn 's gun do dh'fhàillig an ceangal air #2.
+addonError-1=Cha do ghabh an tuilleadan seo a luchdadh a-nuas a chionn ’s gun do dh’fhàillig an ceangal air #2.
 addonError-2=Cha do ghabh an tuilleadan o #2 a stàladh a chionn 's nach eil e a' freagairt ris an tuilleadan a bha dùil aig #3 ris.
 addonError-3=Cha do ghabh an tuilleadan a chaidh a luchdadh a-nuas o #2 a stàladh a chionn 's gu bheil e truaillte a-rèir coltais.
-addonError-4=Cha do ghabh #1 a stàladh a chionn 's nach urrainn do #3 am faidhle atharrachadh a dh'fheumas e atharrachadh.
+addonError-4=Cha b’ urrainn dhuinn #1 a stàladh a chionn ’s nach urrainn dha #3 am faidhle atharrachadh a dh’fheumas e atharrachadh.
 
 # LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #3 is the application name, #4 is the application version
 addonLocalError-1=Cha do ghabh an tuilleadan seo a stàladh air sgàth mearachd ann an siostam nam faidhle.
 addonLocalError-2=Cha do ghabh an tuilleadan seo a stàladh a chionn 's nach eil e a' freagairt ris an tuilleadan a bha dùil aig #3 ris.
 addonLocalError-3=Cha do ghabh an tuilleadan seo a stàladh a chionn 's gu bheil e truaillte a-rèir coltais.
-addonLocalError-4=Cha do ghabh #1 a stàladh a chionn 's nach urrainn do #3 am faidhle atharrachadh a dh'fheumas e atharrachadh.
+addonLocalError-4=Cha b' urrainn dhuinn #1 a stàladh a chionn 's nach urrainn do #3 am faidhle atharrachadh a dh'fheumas e atharrachadh.
 addonErrorIncompatible=Cha do ghabh #1 a stàladh a chionn 's nach eil e co-chòrdail le #3 #4.
 addonErrorBlocklisted=Cha do ghabh #1 a stàladh a chionn 's bheil cunnart mòr gun adhbharaich e duilgheadasan seasmhachd no tèarainteachd.
 
 # Notifications
-notificationRestart.normal=Ath-thoisich gus na dh'atharraich thu a thoirt gu buil.
+notificationRestart.normal=Ath-thòisich gus na dh’atharraich thu a thoirt gu buil.
 notificationRestart.blocked=Tha tuilleadain mhì-thèarainte air an stàladh. Ath-thòisich gus an cur à comas.
 notificationRestart.button=Ath-thòisich
 
@@ -216,7 +216,7 @@ casting.mirrorTabStop=Sguir dhen sgàthanachadh
 # Context menu
 contextmenu.openInNewTab=Fosgail an ceangal ann an taba ùr
 contextmenu.openInPrivateTab=Fosgail an ceangal ann an taba prìobhaideach
-contextmenu.addToReadingList=Cuir ris an liosta leughaidh
+contextmenu.addToReadingList=Cuir ris an liosta-leughaidh
 contextmenu.share=Co-roinn
 contextmenu.copyLink=Dèan lethbhreac dhen cheangal
 contextmenu.shareLink=Co-roinn an ceangal
@@ -305,7 +305,7 @@ masterPassword.incorrect=Facal-faire cearr
 remoteIncomingPromptTitle=Ceangal a' tighinn a-steach
 # LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
 # dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptMessage=Fhuair sinn iarrtas a dh'iarr cead airson dì-bhugachadh cèin. B' urrainn do chliant cèin làn-smachd fhaighinn air a' bhrabhsair agad. A bheil thu airson seo a cheadachadh?
+remoteIncomingPromptMessage=Fhuair sinn iarrtas a dh’iarr cead airson dì-bhugachadh cèin. B’ urrainn do chliant cèin làn-smachd fhaighinn air a’ bhrabhsair agad. A bheil thu airson seo a cheadachadh?
 remoteIncomingPromptDisable=Cuir à comas
 remoteIncomingPromptAccept=Ceart ma-thà
 remoteIncomingPromptCancel=Sguir dheth
@@ -362,9 +362,12 @@ getUserMedia.sharingMicrophone.message2 = Tha am micreofon air
 getUserMedia.sharingCameraAndMicrophone.message2 = Tha an camara 's am micreofon air
 
 #Reader view
+readerView.enter = Fosgail sealladh an leughadair
+readerView.exit = Fàg sealladh an leughadair
 
 # LOCALIZATION NOTE (readerMode.toolbarTip):
 # Tip shown to users the first time we hide the reader mode toolbar.
+readerMode.toolbarTip=Thoir gnogag air an sgrìn airson roghainnean an leughadair
 
 #Open in App
 openInApp.pageAction = Fosgail san aplacaid
