[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/tabbrowser.properties
+++ b/browser/chrome/browser/tabbrowser.properties
@@ -20,7 +20,7 @@ tabs.downloading=A' luchdadh a-nuas…
 tabs.emptyTabTitle=Taba ùr
 tabs.closeTab=Dùin an taba
 tabs.close=Dùin
-tabs.closeWarningTitle=Dearbhaidh a dhùnadh
+tabs.closeWarningTitle=Dearbhaich an dùnadh
 # LOCALIZATION NOTE (tabs.closeWarningMultiple):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
