[gd] update from Pootle (firefox)

--- a/toolkit/chrome/global/aboutReader.properties
+++ b/toolkit/chrome/global/aboutReader.properties
@@ -22,6 +22,7 @@ aboutReader.fontTypeSample=AaÀa
 # for the font size setting. Tapping different samples will change the font size.
 aboutReader.fontSizeSample=AÀ
 
+aboutReader.toolbar.close=Dùin sealladh an leughadair
 aboutReader.toolbar.typeControls=Uidheaman-smachd sgrìobhaidh
 aboutReader.toolbar.addToReadingList=Cuir ris an liosta leughaidh
 aboutReader.toolbar.removeFromReadingList=Thoir air falbh on liosta leughaidh
@@ -33,3 +34,4 @@ aboutReader.footer.deleteThisArticle=Sguab às an t-artaigil seo
 
 # Reader View toolbar button
 readerView.enter=Fosgail am modh leughaidh
+readerView.close=Dùin sealladh an leughadair
