[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -665,5 +665,41 @@ readingList.urlbar.removeDone = Chaidh an duilleag a thoirt air falbh on liosta 
 # Pre-landed strings for bug 1133610 & bug 1133611
 # LOCALIZATION NOTE(readingList.promo.noSync.label): %S a link, using the text from readingList.promo.noSync.link
 readingList.promo.noSync.label = Faigh cothrom air an liosta leughadh agad air na h-uidheaman uile agad. %S
-readingList.promo.noSync.link = Tòisich air an t-sioncronachadh.
-readingList.promo.hasSync.label = Gheibh thu cothrom air an liosta leughadh agad air gach uidheam a tha ceangailte ris an t-sioncronachadh a-nis.
+# LOCALIZATION NOTE(readingList.promo.noSync.link): $S is syncBrandShortName
+readingList.promo.noSync.link = Tòisich air %S.
+# LOCALIZATION NOTE(readingList.promo.hasSync.label): $S is syncBrandShortName
+readingList.promo.hasSync.label = Gheibh thu cothrom air an liosta leughadh agad air gach uidheam a tha ceangailte ri %S a-nis.
+
+# Pre-landed strings for bug 1136570
+readerView.promo.firstDetectedArticle.title = Leugh is sàbhail artaigilean gun duilgheadas
+readerView.promo.firstDetectedArticle.body = Briog air an leabhar gus artaigilean a dhèanamh nas fhasa ri leughadh agus am plus gus an sàbhaladh airson uaireigin eile.
+readingList.promo.firstUse.exitTourButton = Dùin
+# LOCALIZATION NOTE(readingList.promo.firstUse.tourDoneButton):
+# » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.tourDoneButton = Tòisich air leughadh »
+# LOCALIZATION NOTE(readingList.promo.firstUse.readingList.multipleStepsTitle):
+# This is used when there are multiple steps in the tour.
+# %1$S is the current step's title (readingList.promo.firstUse.*.title), %2$S is the current step number of the tour, %3$S is the total number of steps.
+readingList.promo.firstUse.multipleStepsTitle = %1$S (%2$S/%3$S)
+readingList.promo.firstUse.readingList.title = An liosta leughaidh
+readingList.promo.firstUse.readingList.body = Sàbhail artaigilean airson uaireigin eile ach am faigh thu greim orra gu luath nuair a bhios feum agad orra.
+# LOCALIZATION NOTE(readingList.promo.firstUse.readingList.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.readingList.moveToButton = Nise, a' faighinn greim air rud »
+readingList.promo.firstUse.readerView.title = Sealladh an leughadair
+readingList.promo.firstUse.readerView.body = A-mach leis an treamsgal ach an urrainn dhut làn-aire a chur air na tha thu airson leughadh.
+# LOCALIZATION NOTE(readingList.promo.firstUse.readerView.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.readerView.moveToButton = Nise, leughadh furasta »
+readingList.promo.firstUse.syncNotSignedIn.title = Sioncronachadh
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.body): %S is brandShortName
+readingList.promo.firstUse.syncNotSignedIn.body = Clàraich a-steach is faigh cothrom air an liosta-leughaidh àite sam bith a chleachdas tu %S.
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.syncNotSignedIn.moveToButton = Nise, cothrom furasta »
+readingList.promo.firstUse.syncSignedIn.title = Sioncronachadh
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.body): %S is brandShortName
+readingList.promo.firstUse.syncSignedIn.body = Fosgail na h-artaigilean a tha agad air an liosta-leughaidh àite sam bith a chleachdas tu %S.
+# LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.moveToButton):
+# » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.syncSignedIn.moveToButton = Nise, cothrom furasta »
