[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -549,6 +549,7 @@ getUserMedia.sharingCameraAndMicrophone.message2 = Tha thu a' co-roinneadh a' ch
 getUserMedia.sharingApplication.message = Tha thu a' co-roinneadh aplacaid leis an duilleag seo an-dràsta.
 getUserMedia.sharingScreen.message = Tha thu a' co-roinneadh na sgrìn agad leis an duilleag seo an-dràsta.
 getUserMedia.sharingWindow.message = Tha thu a' co-roinneadh uinneag leis an duilleag seo an-dràsta.
+getUserMedia.sharingBrowser.message = Tha thu a’ co-roinneadh taba leis an duilleag seo an-dràsta.
 getUserMedia.continueSharing.label = Lean air a' cho-roinneadh
 getUserMedia.continueSharing.accesskey = c
 getUserMedia.stopSharing.label = Sguir dhen cho-roinneadh
@@ -581,16 +582,20 @@ getUserMedia.sharingMenuMicrophone = %S (micreofon)
 getUserMedia.sharingMenuApplication = %S (aplacaid)
 getUserMedia.sharingMenuScreen = %S (sgrìn)
 getUserMedia.sharingMenuWindow = %S (uinneag)
+getUserMedia.sharingMenuBrowser = %S (taba)
 getUserMedia.sharingMenuCameraMicrophone = %S (camara 's micreofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camara, micreofon is aplacaid)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camara, micreofon is sgrìn)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camara, micreofon is uinneag)
+getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (camara, micreofon is taba)
 getUserMedia.sharingMenuCameraApplication = %S (an camara is an aplacaid)
 getUserMedia.sharingMenuCameraScreen = %S (an camara is an sgrìn)
 getUserMedia.sharingMenuCameraWindow = %S (an camara 's an uinneag)
+getUserMedia.sharingMenuCameraBrowser = %S (camara ’s taba)
 getUserMedia.sharingMenuMicrophoneApplication = %S (micreofon is aplacaid)
 getUserMedia.sharingMenuMicrophoneScreen = %S (micreofon is sgrìn)
 getUserMedia.sharingMenuMicrophoneWindow = %S (micreofon is uinneag)
+getUserMedia.sharingMenuMicrophoneBrowser = %S (micreofon is taba)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Chan eil fhios cò às a thàinig e
