[gd] update from Pootle (firefox)

--- a/browser/chrome/browser/migration/migration.properties
+++ b/browser/chrome/browser/migration/migration.properties
@@ -19,6 +19,7 @@ importedSafariReadingList=Liosta leughaidh (o Safari)
 # Note: When adding an import source for profile reset, add the string name to
 # resetProfile.js if it should be listed in the reset dialog.
 1_ie=Roghainnean lìn
+1_edge=Roghainnean
 1_safari=Roghainnean
 1_chrome=Roghainnean
 1_360se=Roghainnean
@@ -47,7 +48,6 @@ importedSafariReadingList=Liosta leughaidh (o Safari)
 16_firefox=Faclan-faire air an sàbhaladh
 16_360se=Faclan-faire air an sàbhaladh
 
-32_ie=Annsachdan
 32_safari=Comharran-lìn
 32_chrome=Comharran-lìn
 32_360se=Comharran-lìn
