--- a/browser/chrome/browser/tabbrowser.properties
+++ b/browser/chrome/browser/tabbrowser.properties
@@ -29,3 +29,8 @@ tabs.closeWarningTitle=Dearbhaich an dùnadh
 tabs.closeWarningMultiple=;Tha thu gu bhith a' dùnadh #1 taba. A bheil thu cinnteach gu bheil thu airson leantainn ort?;Tha thu gu bhith a' dùnadh #1 thaba. A bheil thu cinnteach gu bheil thu airson leantainn ort?;Tha thu gu bhith a' dùnadh #1 tabaichean. A bheil thu cinnteach gu bheil thu airson leantainn ort?;Tha thu gu bhith a' dùnadh #1 taba. A bheil thu cinnteach gu bheil thu airson leantainn ort?
 tabs.closeButtonMultiple=Dùin na tabaichean
 tabs.closeWarningPromptMe=Thoir rabhadh dhomh mus dùin mi iomadh taba còmhla
+
+# LOCALIZATION NOTE (tabs.muteAudio.tooltip):
+# %S is the keyboard shortcut for "Mute tab"
+# LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
+# %S is the keyboard shortcut for "Unmute tab"
