--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -75,8 +75,10 @@ definitionlist =       liosta nan deifinisean
 term           =       teirm
 definition     =       deifinisean
 
+
 # More sophisticated roles which are not actual numeric roles
 textarea       =       raon an teacsa
+
 
 # Text input types
 textInputType_date   =       ceann-là
@@ -191,6 +193,9 @@ quicknav_Separator   = Sgaradairean
 quicknav_Table       = Clàir
 quicknav_Checkbox    = Bogsaichean cromaige
 
+# MathML menclose notations.
+# See developer.mozilla.org/docs/Web/MathML/Element/menclose#attr-notation
+
 # Shortened role names for braille
 menubarAbbr        =       bàr a' chlàir-thaice
 scrollbarAbbr      =       bàr-sgrolaidh
@@ -203,7 +208,6 @@ dialogAbbr         =       còmhradh
 separatorAbbr      =       sgaradair
 toolbarAbbr        =       bàr-inneal
 statusbarAbbr      =       bàr na staid
-tableAbbr          =       tbl
 columnheaderAbbr   =       bann-cinn a' chuilbh
 rowheaderAbbr      =       bann-cinn an ràigh
 columnAbbr         =       colbh
@@ -274,3 +278,7 @@ stateCheckedAbbr = (x)
 stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
+
+
+root-indexAbbr     = clàr-amais
+
