--- a/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -5,6 +5,7 @@
 rememberValue = Cleachd manaidsear nam faclan-faire gus an luach seo a chumail ann an cuimhne.
 rememberPassword = Cleachd manaidsear nam faclan-faire gus am facal-faire seo a chumail ann an cuimhne.
 savePasswordTitle = Dearbhaich
+# LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -14,7 +15,6 @@ rememberPasswordMsg = A bheil thu ag iarraidh am facal-faire airson "%1$S" a chu
 rememberPasswordMsgNoUsername = A bheil thu airson am facal-faire a chumail an cuimhne air %S?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
-noUsernamePlaceholder=Gun ainm-cleachdaiche
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -27,14 +27,12 @@ notifyBarNeverRememberButtonText = Na cuimhnich am facal-faire airson na làraic
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Cum an cuimhne
 notifyBarRememberPasswordButtonText = Cuimhnich am facal-faire
-notifyBarRememberPasswordButtonAccessKey = R
 passwordChangeTitle = Dearbhaich atharrachadh an fhacail-fhaire
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = A bheil thu airson am facal-faire a chaidh a shàbhaladh airson %S ùrachadh?
 updatePasswordMsgNoUser = A bheil thu airson am facal-faire a chaidh a shàbhaladh ùrachadh?
 notifyBarUpdateButtonText = Ùraich am facal-faire
-notifyBarUpdateButtonAccessKey = U
 notifyBarDontChangeButtonText = Na atharraich
 notifyBarDontChangeButtonAccessKey = D
 userSelectText = Dearbhaich cò an cleachdaiche a tha thu ag atharrachadh an fhacail-fhaire air a shon
@@ -47,3 +45,9 @@ removeAllPasswordsPrompt=A bheil thu airson gach facal-faire a thoirt air falbh?
 removeAllPasswordsTitle=Thoir air falbh a h-uile facal-faire
 loginsSpielAll=Tha faclan-faire air a stòradh air a' choimpiutair agad airson nan làraichean a leanas:
 loginsSpielFiltered=Tha na faclan-faire a leanas a' freagairt ris an lorg agad:
+# LOCALIZATION NOTE (loginHostAge):
+# This is used to show the context menu login items with their age.
+# 1st string is the username for the login, 2nd is the login's age.
+loginHostAge=%1$S (%2$S)
+# LOCALIZATION NOTE (noUsername):
+# String is used on the context menu when a login doesn't have a username.
