--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,8 @@ quit-button.tooltiptext.mac = Fàg %1$S (%2$S)
 # approval before you change it.
 loop-call-button3.label = Hello
 loop-call-button3.tooltiptext = Tòisich air còmhradh
+# LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
+# placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
 
 social-share-button.label = Co-roinn an duilleag seo
 social-share-button.tooltiptext = Co-roinn an duilleag seo
