--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -65,9 +65,6 @@ nsIJSONDecodeDeprecatedWarning=Chan eil cleachdadh nsIJSON.decode 'ga mholadh tu
 nsIJSONEncodeDeprecatedWarning=Chan eil cleachdadh nsIJSON.encode 'ga mholadh tuilleadh.  Cleachd JSON.stringify 'na àite.
 nsIDOMWindowInternalWarning=Chan eil cleachdadh nsIDOMWindowInternal 'ga mholadh tuilleadh. Cleachd nsIDOMWindow 'na àite.
 InputEncodingWarning=Chan eil cleachdadh inputEncoding 'ga mholadh tuilleadh.
-# LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
-MozBeforePaintWarning=Chan eil taic ann ri tachartasan MozBeforePaint tuilleadh.  Feumar mozRequestAnimationFrame a shìneadh a-null gu argamaid callback non-null.
-FullScreenDeniedBlocked=Chaidh iarrtas na làn-sgrìn a dhiùltadh a chionn 's gun do bhac an cleachdaiche làn-sgrìnichean air an àrainn seo.
 FullScreenDeniedDisabled=Chaidh iarrtas airson làn-sgrìn a dhiùltadh a chionn 's gun deach an API làn-sgrìn a chur à comas leis a' chleachdaiche.
 FullScreenDeniedFocusedPlugin=Chaidh iarrtas airson làn-sgrìn a dhiùltadh a chionn 's gu bheil plugan uinneagaichte am fòcas.
 FullScreenDeniedHidden=Chaidh iarrtas airson làn-sgrìn a dhiùltadh a chionn 's nach eil an sgrìobhainn ri fhaicinn tuilleadh.
@@ -158,11 +155,16 @@ ImportXULIntoContentWarning=Importing XUL nodes into a content document is depre
 XMLDocumentLoadPrincipalMismatch=Use of document.load forbidden on Documents that come from other Windows. Only the Window in which a Document was created is allowed to call .load on that Document. Preferably, use XMLHttpRequest instead.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Sguireadh de thar-chur IndexedDB nach robh air a choileanadh oir chaidh gluasad a dhèanamh air an duilleag.
-# LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
-WillChangeBudgetWarning=Will-change memory consumption is too high. Surface area covers %1$S pixels, budget is the document surface area multiplied by %2$S (%3$S pixels). All occurences of will-change in the document are ignored when over budget.
+# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=Bha ServiceWorker ann nach b’ urrainn dhuinn a chur gu dol sa bhad a chionn ’s gu bheil sgrìobhainnean eile san aon tùs a’ cleachdadh na h-àireimh as motha de dh’obraichean mu thràth. Tha an ServiceWorker sa chiutha a-nis is thèid a thòiseachadh cho luath ’s a chrìochnaicheas cuid dhen na h-obraichean eile.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 PannerNodeDopplerWarning=Use of setVelocity on the PannerNode and AudioListener, and speedOfSound and dopplerFactor on the AudioListener are deprecated and those members will be removed. For more help https://developer.mozilla.org/en-US/docs/Web/API/AudioListener#Deprecated_features
 # LOCALIZATION NOTE: Do not translate "Worker".
 EmptyWorkerSourceWarning=A’ feuchainn ri obraiche a chruthachadh de thùs bàn. Tha deagh-theans gu bheil seo gun deòin.
+# LOCALIZATION NOTE: Do not translate "ServiceWorker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "opaque", or "Response".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
