--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -6,7 +6,6 @@ BlockMixedActiveContent = Chuir sinn casg air luchdadh susbaint-taisbeanaidh mhe
 # CORS
 # LOCALIZATION NOTE: Do not translate "Access-Control-Allow-Origin", Access-Control-Allow-Credentials, Access-Control-Allow-Methods, Access-Control-Allow-Headers
 CORSDisabled=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Tha CORS à comas).
-CORSRequestFailed=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Dh'fhàillig an t-iarrtas CORS).
 CORSRequestNotHttp=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Chan e http a tha san CORS).
 CORSMissingAllowOrigin=Chaidh an t-arrtas Cross-Origin a bhacadh: Chan eil an Same Origin Policy a' ceadachadh leughadh a' ghoireis chèin aig %1$S. (Adhbhar: Tha am bann-cinn CORS "Access-Control-Allow-Origin" a dhìth).
 CORSAllowOriginNotMatchingOrigin=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: CORS header 'Access-Control-Allow-Origin' does not match '%2$S').
@@ -17,10 +16,10 @@ CORSInvalidAllowMethod=Cross-Origin Request Blocked: The Same Origin Policy disa
 CORSInvalidAllowHeader=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: invalid token '%2$S' in CORS header 'Access-Control-Allow-Headers').
 CORSMissingAllowHeaderFromPreflight=Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at %1$S. (Reason: missing token '%2$S' in CORS header 'Access-Control-Allow-Headers' from CORS preflight channel).
 
-# LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
-InvalidSTSHeaders=Shònraich an làrach seo bann-cinn Strict-Transport-Security nach eil dligheach.
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
-InvalidPKPHeaders=The site specified an invalid Public-Key-Pins header.
+# LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
+
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=Tha an làrach seo a' cleachdadh teisteanas SHA-1; mholamaid gun cleachd thu teisteanas aig a bheil algairimean soidhnidh a chleachdas hash functions a tha nas làidire na SHA-1.
 InsecurePasswordsPresentOnPage=Tha raointean fhaclan-faire air duilleag (http://) nach eil tèarainte. Seo cunnart tèarainteachd agus faodaidh gun goidear faclan-faire air an luchd-chleachdaidh.
